feat: angular migration- groups
Signed-off-by: aditya.goyal <aditya.goyal@graviteesource.com>

feat: admin can require user groups to be added in applications

Signed-off-by: aditya.goyal <aditya.goyal@graviteesource.com>

feat: resolved review comments

Signed-off-by: aditya.goyal <aditya.goyal@graviteesource.com>